# model/response.go
@@ -1,7 +1,7 @@
 package model
 
 type (
-	DataResponse[T Product | []Product | string] struct {
+	DataResponse[T Product | []Product | User | string] struct {
 		Data T `json:"data"`
 	}
 	ErrorResponse struct {
